# reasonkit

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
examples/: wrap_anthropic_example.py  wrap_openai_example.py
plugins/reasonkit/.claude-plugin/: plugin.json
plugins/reasonkit/commands/: reasonkit.md
plugins/reasonkit/scripts/: reasonkit_run.py
plugins/reasonkit/skills/reasonkit/: SKILL.md
src/reasonkit/: __init__.py  __main__.py  _sanitize.py  _utils.py  branching.py  classifier.py  codegen.py  compare.py  core.py  critique.py  errors.py  merge.py  stop_conditions.py  trace.py
src/reasonkit/prompts/: classify_and_assumptions.txt  critique_all.txt  deepen_concrete.txt  fix_code.txt  generate_approaches.txt  generate_code.txt  merge.txt  refine_direct.txt  refine_merge.txt  verify_code.txt
tests/: conftest.py  fixtures.py  test_classifier.py  test_codegen_output_handling.py  test_compare_mode.py  test_direct.py  test_pipeline_code.py  test_pipeline_decision.py  test_robustness.py  test_routing.py  test_streaming.py
